--- a/shiatsu-project/src/components/Services/Services.scss
+++ b/shiatsu-project/src/components/Services/Services.scss
@@ -14,6 +14,8 @@
     color: #fff;
     text-shadow: -1px 2px 3px black;
     font-size: 1.75rem;
+    font-weight: 400;
+    font-style: italic;
     padding: 2.5vh 0;
   }
 
